Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100420

QPicture doesn't respect Qt::IntersectClip when used with setClipPath

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.3.0 Beta2, 6.4.0 Beta1
    • 5.15.2, 6.2.2
    • GUI: Painting
    • None
    • Debian GNU/Linux bookworm/sid
    • Linux/X11
    • 52a83658c3 (qt/qtbase/dev) 52a83658c3 (qt/tqtc-qtbase/dev) 6d2c06a667 (qt/qtbase/6.3) 6d2c06a667 (qt/tqtc-qtbase/6.3) 16cbe93195 (qt/qtbase/6.2) 16cbe93195 (qt/tqtc-qtbase/6.2)

      When I define a clipPath in a QPicture with Qt::IntersectClip, it overrides the clipPath or clipRect defined in the QPainter which draws that QPicture.

      It works fine when I define a clipRect in the QPicture, thanks, I presume, to this fix https://codereview.qt-project.org/c/qt/qtbase/+/104908

      I think that the same fix should be done for the setClipPath method.

      The attached example illustrate that (click on the button to switch between the cliprect and clippath)

        For Gerrit Dashboard: QTBUG-100420
        # Subject Branch Project Status CR V

            vgt Eirik Aavitsland
            troopa81 Julien Cabieces
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes